--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>MgapUser</title>
+<title>Sistema Mgap Citynet Ing.</title>
 <% if current_user %>
 	<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 <% else %>
