--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -13,9 +13,10 @@
     <thead>
       <tr>
             <th>Nombre</th>
-	    <th>Lugares</th>
-	    <th>Personal</th>
+	    <th></th>
+	    <th></th>
             <th>Acciones</th>
+            <th></th>
       </tr>
     </thead>
 
@@ -24,7 +25,7 @@
 	      <td><%= cliente.nombre.humanize %></td>
               <td><%= link_to 'Lugares', cliente_lugares_path(cliente), class: "btn btn-success btn-sm" %></td>
 	      <td><%= link_to 'Responsables', cliente_responsables_path(cliente),  class: "btn btn-success btn-sm" %></td>
-	      <td><%= link_to "Editar", edit_cliente_path(cliente), class: "btn btn-primary btn-sm" %></td>
+	      <td><%= edit_link edit_cliente_path(cliente) %></td>
               <td><%= delete_link cliente_path(cliente) %></td>
       <% end %>
     </tbody>
@@ -32,7 +33,7 @@
 </div>
 
 <% else %>
-<%= content_tag :h3, "Listado Clientes" %>
+	<%= content_tag :h3, "Listado Clientes" %>
 	
 <div class="table-responsive">
   <table class="table table-striped table-hover">
