--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
 			<% end %>
 			</li>
 			<li>
-			<%= link_to session_path("current"), method: :delete do %>
+			<%= link_to logout_path do %>
 				<span class="glyphicon glyphicon-log-out"></span>
 			<% end %>
 			</li>
